corrects a few style glitches: images on mobile, card arrow underlines, and image captions in galleries

--- a/src/sass/partials/_galleries.scss
+++ b/src/sass/partials/_galleries.scss
@@ -2,6 +2,11 @@
    GALLERIES
    ============================== */
 
+/** Fixes sloppy figcaptions in WP galleries **/
+.wp-block-gallery .blocks-gallery-item figcaption {
+	width: calc(100% - 19px);
+}
+
 .gallery {
 
 	display: flex;
