--- a/src/sass/partials/cl/_cards.scss
+++ b/src/sass/partials/cl/_cards.scss
@@ -78,6 +78,7 @@
           background-position: 0 0;
           background-repeat: no-repeat;
           background-size: 100% auto;
+          border: 0;
         }
 
     }
